----------------------------------------------------------------------
 OmegaT 5.5.0
----------------------------------------------------------------------
  8 Enhancements
  2 Bug fixes
  0 Localisation updates
----------------------------------------------------------------------
5.5.0 vs 5.4.1

  Bug fixes:

  - External opening/browsing not supported on some Linux environments
  https://sourceforge.net/p/omegat/bugs/999/

  - project_stats.txt overwritten with garbage when opening Statistics window
  https://sourceforge.net/p/omegat/bugs/1035/

  Implemented requests:

  - Joomla language files support
  https://sourceforge.net/p/omegat/feature-requests/1328/

  - Alternative layout for glossary pane
  https://sourceforge.net/p/omegat/feature-requests/1386/

  - Improve access speed for uncompressed StarDict dictionaries
  https://sourceforge.net/p/omegat/feature-requests/1532/

  - Make glossary colors customizable
  https://sourceforge.net/p/omegat/feature-requests/1537/

  - Glossary layout plugin system
  https://sourceforge.net/p/omegat/feature-requests/1538/

  - Add repository name to credentials dialog in team projects
  https://sourceforge.net/p/omegat/feature-requests/1539/

  - Add plain text translation option to Yandex.Cloud
  https://sourceforge.net/p/omegat/feature-requests/1550/

  - Simple support for dir attribute modification in HTML
  https://sourceforge.net/p/omegat/feature-requests/1556/

----------------------------------------------------------------------
 OmegaT 5.4.1 (2020-12-15)
----------------------------------------------------------------------
  0 Enhancements
  1 Bug fix
  0 Localisation updates
----------------------------------------------------------------------
5.4.1 vs 5.4.0

  Bug fixes:

  - Default color for untranslated segments is wrong
  https://sourceforge.net/p/omegat/bugs/1031/

----------------------------------------------------------------------
 OmegaT 5.4.0 (2020-12-12)